<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sambovisal.vigneshclass2.Main2Activity">
    <include layout="@layout/app_bar_layout" android:id="@+id/main2_bar"/>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/choose_any_number"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="29dp"
        app:layout_constraintTop_toBottomOf="@+id/main2_bar" />

    <RadioGroup
        android:layout_width="263dp"
        android:layout_height="157dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="55dp"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:id="@+id/radioGroup">

        <RadioButton
            android:id="@+id/radio_btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="0dp"
            android:text="@string/_1_empty_activity" />

        <RadioButton
            android:id="@+id/radio_btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2_sign_up" />

        <RadioButton
            android:id="@+id/radio_btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_3_login" />

        <RadioButton
            android:id="@+id/radio_btn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_4_sign_in" />

    </RadioGroup>

    <Button
        android:id="@+id/sub_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="48dp"
        android:onClick="ClickMe"
        android:text="@string/submit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</android.support.constraint.ConstraintLayout>
